# ChangeLog for dev-python/jsonrpclib
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/jsonrpclib/ChangeLog,v 1.7 2015/03/08 23:51:57 pacho Exp $

  08 Mar 2015; Pacho Ramos <pacho@gentoo.org>
  jsonrpclib-0_pre20110820-r1.ebuild:
  x86 stable, bug 540290

  08 Mar 2015; Manuel Rüger <mrueg@gentoo.org> -jsonrpclib-0_pre20110820.ebuild:
  Remove old.

  06 Mar 2015; Pacho Ramos <pacho@gentoo.org>
  jsonrpclib-0_pre20110820-r1.ebuild:
  amd64 stable, bug 540290

  25 Dec 2014; Michał Górny <mgorny@gentoo.org> jsonrpclib-9999.ebuild:
  Sync the live ebuild.

  23 Oct 2013; Matthew Thode <prometheanfire@gentoo.org>
  jsonrpclib-0_pre20110820-r1.ebuild:
  update to distutils-r1

*jsonrpclib-0_pre20110820-r1 (20 Apr 2012)

  20 Apr 2012; Mike Frysinger <vapier@gentoo.org>
  +jsonrpclib-0_pre20110820-r1.ebuild,
  +files/jsonrpclib-fix-nested-imports.patch:
  Add fix from Jon Salz for nested module importing.

*jsonrpclib-9999 (18 Apr 2012)
*jsonrpclib-0_pre20110820 (18 Apr 2012)

  18 Apr 2012; Mike Frysinger <vapier@gentoo.org>
  +jsonrpclib-0_pre20110820.ebuild, +jsonrpclib-9999.ebuild, +metadata.xml:
  Initial import based on ebuild from rion-overlay for ChromiumOS.