@@ -3,14 +3,26 @@ Hash: SHA256
 
 AUX jsonrpclib-fix-nested-imports.patch 1134 SHA256 92e53a381ee3e70b304676fbf95c5f5da494c7c2df78314b3361b632083f72ae SHA512 c302e55582f422ab14d769d04b44f4f8f727689446e4d052863aa170c63aa938d7f95820f0f7adb617ebf9273573a049e8e645659d9149179d2c22f6c7ce0aa5 WHIRLPOOL 1ad0ef144cf0445b77ff1612b63d7bb7cbcc0701bd7e003f801a1905d95c7bcb39afcca8b551ebdb717fe61cf74544ede4ef760e350fb1cd9bc1a438acc79b08
 DIST jsonrpclib-0_pre20110820.tar.bz2 14608 SHA256 a31ce391e8f430f2434c538dedb012e879296628a7b2968f1aa41cb36207369d SHA512 80864890982c4a11996cd9fae21029cdf40b089eb6c2d265c645f52fe0a6e858b3405c5d899d2a5908527da04263d93064f365c5308adda1791105bf32329b71 WHIRLPOOL d7ad4277ea5bcb3451728a36f42a76e965256ac6239269e12125c1a19f9dbbeb9dfe69b58738b42e7823a687ad195f8a782aa2e0fe4797a59743b5230f598365
+DIST jsonrpclib-0_pre20150305.tar.xz 14948 SHA256 392ad1643d5455f3b9d08414ca3827edad7b4d189376203c2ccc2980e807aba1 SHA512 091bb753469b5983d68631d8acebea6e9b208b01758a08f948a63b9d022ab2ce072ceee259a6747645dadf9a02ca77185fd5cdde3d1635addedc402629e1c381 WHIRLPOOL 6d2967d4f5c6decd24c27dbc9f298e550a99873d1657618ed4742f4f9aefe1e9ca1cc660702a786d42463d3853df0cd0644d972810c7369cf56d309925df6780
 EBUILD jsonrpclib-0_pre20110820-r1.ebuild 711 SHA256 08bc5e3865af72bf0c40a534974eb5b6befd01466cea10f1c392c9b1c49249dc SHA512 455110bd699de892e0829b53bf781a1e493c13723304347558c73e7f263d95070dbffc5407051d341b020c7753218a11765b3cd80ad1351466a036324db83d03 WHIRLPOOL 4a8d0563ada5e0a4e6603e3ce7b2b7b027e47a3effdfc055c923666208987b4e3611f33fe96f28fc0d3f17ce7a685c47d16662581d519b6bc807f8b92029c2f2
-EBUILD jsonrpclib-9999.ebuild 702 SHA256 288ae97d938601cdb243611b49a3e1de22e57fab3981213832c522fff54a8c8d SHA512 2494143dc614e74064416d698702661833058ccfabc8ae71592daa3b6728744103afb2d9849a25dee5b80f37b7ca52f0b60102fbf83874010fd60c6a2262e92c WHIRLPOOL cb10892be494550e272918a82a7653fdbc07c4149af417882b027dbe6397bd84e018dd09ea5ff673444dc2f38a750734946acd4c8bc05f375664404286040080
-MISC ChangeLog 1251 SHA256 d3909f9376fa0137b224d57f2ad88773bb6401c81a34dc5d08ede3a8e1ab7c4d SHA512 30e32d68f72f80a3c5133e51141b4bc47c92465f4497b9987277177d7d219a474039e1363be7b9d0dd7b64ac0e5fea4b96b8d31916de630dfb2fb0c5722b31fe WHIRLPOOL eb0e11ff8d8f5fa2779232e5aef9c99daa3a4bccdcdd271a8fbc60accffc9e28a6e147307f222dee9c7d75f0a2888088a53fface1a0c952eb13b3ec8bb602a30
+EBUILD jsonrpclib-0_pre20150305.ebuild 706 SHA256 19f7cb41ac994d72602879cbc207cba984295c5b3ba61c34010ea55a703bd776 SHA512 9f03b4ae659c7a07594d06621e08db5a9126b7426d155f50b45e69b8747bcd2f47e23914de3f662ebb14923a6033e627ff1d881e74a00389347b96571b81aab3 WHIRLPOOL ff53fc4d0156eb77b5363a158808c9c34adf9a4d98dfa490d74197690590045f397f3d671a987182c10cc4bf1ad100b38c9e8e60ce827315705722c737b84bf5
+EBUILD jsonrpclib-9999.ebuild 697 SHA256 ab9f9711ea56e838b413212b4247026faf6cb7c7a4407a7382fbaa6b4e7034bb SHA512 df16f99d6818cd990d3bfafa969f3a788cd3d959d8611f1b1908c94e7101c88541f7c65d2bbb5edb7499f5e1daeee3b4c7528779edcc03c14cdc8278fd82c42f WHIRLPOOL c4b72de75b9e0d40abbcdc8630d28ea69dabf8f14a0a5594205e55c3dd8768b70cfcf37f65c2454a3b4b8c6c6bc673e5f1e07b0c2a8b9daf8b6bdd65a5013311
+MISC ChangeLog 1456 SHA256 b32abaa56b2cc779b801a200119028e5767ce821867c0937a28de5ae4f0fa125 SHA512 b480b56a6bf43a2ad3fed0135e745fe43db9b0ab9e1e13a7d32ae48c5b603a4459520dffa93dc96fe87f0afc5d71eba3359c3f41dab38f1b8636d129fb18edeb WHIRLPOOL b33c427c8648d891ebf44329ffbc21ab7d7359e451120e8c71b674534fd978a4e92f83550859746915295c3c816dda3d918aeeb37e6ce0423b21e6b7c19034b7
 MISC metadata.xml 279 SHA256 9d45a0168715338fa5a6e4e23a6f0032b0f2ce9e35bf8fd183453fd8cd18988b SHA512 a49fcd1760dd634ede47b0282e3abe710a933cf6bf32f8137f7e84ed0503f87c159d901b0994baa6d77dce0ad84855c31defd18215a7bb40342e7f53ca1c1c88 WHIRLPOOL 43e68b08a3d96713da4663d0c7b13d6d17f29a711890ff7db4b6a34d80ca2bbfb2be0b204b79dab99c59ae7c2976c7ea9c054cfd7e0d8e94f7d8f8f241e2c756
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlT84JoACgkQCaWpQKGI+9QcGACfYQyZ5JFQCS2+D1xOg+f65iT+
-pvEAni1JdIFamQjpG6wuotBgpzDYiBtP
-=wjCM
+iQIcBAEBCAAGBQJVCZr/AAoJEPGu1DbS6WIAVNEP/izZWg2El/RTj3Q9xrEuaKRs
+4+0C7lGwAWacVQF4QgxHfxk4cpDv7RZwk31+O27DnvwCK14cft+WwBiWGCsJUbiE
+3fO0pjCeAFeFFrDFxFmZPxGa2khARzqFD31JB/ldUW8xHu2+B6pee8OkOJvFe0tu
+4uDzEuea/IEfeY9cUnKqe9n6m0RDBLKt/vRIIGyCETjSqwbXag4jJOJ6bpGGDZon
+YX8sJdX/k02MfjNY94Z+FeKfX3DFvBPik2WBiaS4axgAdypw7xSi1e6iZIAcWlPE
+eiJxklGNhsAbeUOHqwfmxoio8i3QadnOrI9Torm9DEGm6LZ9jD/iTr6Tt05Wn4nG
+axR+7MgCA5tvs5O8g7g0G79dx3KagTUv6izABdOJ5hPsYKxhGs2B9zvWbB4/nivd
+s2Fcmhu4RqLInoT6zXZqAk/sXborjpydbeM939Nk6u9mGfx8nWqY9JpEh6qmydn4
+UX+Tqp9LuIPSPgH0iVjila2pGJT3Id4YrmCnDZ4p+E+55KLSgGu91WdNj7EMZKc3
+uYKN0J/V9355eyu3Xv0GT54Pa1iZo5kJMy4LBzGDhRdsztAT5QvKgP5/7G7zOaO7
+Ep9jiIU6dD6b4h9JjjTJ5UOUYPbvE+JA5ib8J0JzL/LkkY+fLrK0hX/xmGmIhc5l
+y4hipJJJCAKxhEfT7hpp
+=bOia
 -----END PGP SIGNATURE-----
