@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/jsonrpclib/jsonrpclib-9999.ebuild,v 1.3 2015/03/18 15:34:01 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/jsonrpclib/jsonrpclib-0_pre20150305.ebuild,v 1.1 2015/03/18 15:34:01 vapier Exp $
 
 EAPI="5"
 PYTHON_COMPAT=( python2_7 )
