@@ -5,15 +5,17 @@ AUX libcaca-0.99_beta18-fix-tests.patch 1874 SHA256 4526b44c79e194d61fbb86957bdb
 AUX libcaca-0.99_beta18-latex_hacks.patch 641 SHA256 859186308ef3ceee830f6d37200c76f443523f02a546e0976063bfa742bd5f6c SHA512 66d878696ae237310cea20e3bd5802afce6fa94f66b07c1660456d17a33218a93e3aea6bcaf99bfada67bef6857089559aa48068a1761e7fe439a81d82a1ab6b WHIRLPOOL e19d7f278f57226d2a6a23a4cabee84db3557acadbc28c9736ededb96e3cbe0d73cf418017974aa8b76236207d854ec84260a3b383dec38d4c99d00be81ff937
 DIST libcaca-0.99.beta17.tar.gz 1110516 SHA256 6355ae9e3961e983ef66057a232d25f1fba2e7fa615d7591aba011d78764f1d6 SHA512 1d08a45a742cbda2c80810e753b49588cb9073ef545a1d47537745c4e62dc79748a25907903ffee58676d9aa5b75c5e0658666429cf028e10c09157d418c8d19 WHIRLPOOL bb241f90a36e2b73e2b50dcf15260153385ac2521bbe43a120c55ce5f2560ab9078ca40cf90a799646e6736461a876e33203abdd39f4ab794e6b509f8622b2d4
 DIST libcaca-0.99.beta18.tar.gz 1168552 SHA256 77ea06633f4a6022dccd4f76c1823e167a40cb05308fc1c7ea0fa1f80f6c33a1 SHA512 b2a8264ec36b74a01ff415a1fd7cb1806c76e28795b73607d4f8fa5ed5cc776b215f2817f45f06c672688f010622ee5c5e2f9dc4d0c43417dedbff545d575ca5 WHIRLPOOL 3e6404f0d16ca5718022a919c1568b0e8afaa40d58ca4a1e3271c437bebd3cde40ac63f45c6bbfea00a4936a673c24bdd21ecc0070f4814464d787dab33c183b
+DIST libcaca-0.99.beta19.tar.gz 1203495 SHA256 128b467c4ed03264c187405172a4e83049342cc8cc2f655f53a2d0ee9d3772f4 SHA512 780fc7684d40207cc10df3f87d6d8f1d47ddfffa0e76e41a5ce671b82d5c7f090facb054c3d49ca7c4ea1a619625bb9085ce52f837f50792b4a2d776a4c68e15 WHIRLPOOL 5e0e72543aab79f39c063ab67396ec5e31610c4cffade8c33f5f54e75ccb2ced561da194d287d4857cb712b6cd813bc1430197cc101ca675a441b7ea74d44839
 EBUILD libcaca-0.99_beta17.ebuild 2650 SHA256 b2874ad822ccab2f25af40b987f18bbf88b16685025afa92923848ca242b87dd SHA512 1f1cf2887ab542cbf9590b7e2f869fbf4f5c8b7723e2c357b8c29c77be385a2553d02f4417608885f1b840bb2c1845a0158a46863fe3698105e5f37fe6daefde WHIRLPOOL 64f7b9fda46b5e8f4c1e425aa4e357557b50a359d1f169fe024cf8315c9eea93d2e31636fdbf8330ac35b72fae42202e59af4cc6527f68935d7218889e1ccf3e
 EBUILD libcaca-0.99_beta18-r1.ebuild 3238 SHA256 ab62162f3ee1f5ac083804a5711eb50849c928b09759d554c0b2af4ed5377784 SHA512 9591b98eea13391e3654c7e986f405ecaf39230e33761f0ca3efe4d953adda651f0aedaaa24a1e246d2945495912ad0f91d99a9323ca25a5a91b42d61987dd3a WHIRLPOOL 1ff3d383d9d91fa0e5f1b3d8d3a1ca40ec5f173fa2f7cf82278a2cdb8415e07f1c162556a971b019ec5bb2c258473a6d06e9b5e71f580b0f291699c1dbe34a74
 EBUILD libcaca-0.99_beta18-r2.ebuild 3891 SHA256 bac29f1f0b1764f5cf09178017ce86a859815581bc2ff173ede8224db30da2e0 SHA512 516f388b80ef051435b986f9d6a5cea97ee1f2d195050a9fd0b6808de0919fc855c14a1ae0efe0f79b9ef9407099a788f605da229182c4a4faa87c271e5eea2a WHIRLPOOL aa7240fefbe69f9dc61a812eff6d4db4abe67d8e60d29c8e90f503940b6865f4f1161c81decad1c674435fc572df0ba4c73e7bf103c7ace71cc0a289bcdc3830
-MISC ChangeLog 18610 SHA256 8e5e6817a94c4c0d69c1201af7c6bfd717c1cab66546ba55167ede873e5c0f74 SHA512 817642d89a98656ff315bf21cfc5903c883eedccff565d041e8395b9bf6af8ed4cbc77a07874b15195888475de9b7340704fdf7af9ed1b91a21a7490423fc8a5 WHIRLPOOL 8b74fe98ea8117dfe28bca038e667a534036688569e54ed24c22f7bc3c56df8782aac859fc5138bffd8584d2773ea8cfb79d0098b3579df99c64b8b010703d74
+EBUILD libcaca-0.99_beta19.ebuild 4225 SHA256 a634499287b8b76b1b42bdb60e82b31a6576e6b08dcbaf08b5bc35e044261209 SHA512 ede195f4c5af6d0135054db3998e8c4607364f622b6792de02b33268bebc1f2f19e14db17d9d7b15402ffc58733fbc0afa571d20ba68009a476f607d40f7502f WHIRLPOOL ba62f009836043040f2098a579a7b4301481557a69fb7ed65b66fdf3ecaf6c52c1f2d0027cd4a5ad12806c589abf2ab0786876b7ea917ac77b6cf097051ab436
+MISC ChangeLog 18875 SHA256 f6ee0975ccbf7d8baf5bf0882f64a075dabc9407869a1ee22d64dd865ab091f6 SHA512 6bdf1bc2c923967a562ee4dba70c446400b32a645bf36b9307bd690e46ed4c5cc3062cad85c7917280a8edc439548e3bc7a543bc4d96e39be3d0a89574f3a8ed WHIRLPOOL 17107bb87dcd62a53f96492866463c52ed00ca723b1eef295b8fcb2ff401d5b7ed8cc39bcade30c59596f2278621ec9c04e8c393bcbed0a479e79dde1d5bb3ea
 MISC metadata.xml 223 SHA256 dd48e823ec9a151bc3611121402ed26ee24eb3304aa62870b1e875a8fa0ac812 SHA512 cacba929b8688a7270637f34d348216fdeb89e725cdee4b40e5577ca3f626c5f72e73c1c125605a284506aff47265f41e3fedaa76ed4074c540fc1f200e6d494 WHIRLPOOL dcd04d57abcfe2704036097ed68500917f74b7024b46580e9054e1c933d55678992c350fe07ff0efd590b9345fbcdd81665b8ce546f786dd31f5a0f4eb654da3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlQfL+MACgkQkKaRLQcq0GK1HQCfdbbVVKNldsgJpq39PFpVBlab
-iqUAn3WuQ+hY99fjTHPgOVPf3KjcMhQ4
-=qfl1
+iEYEAREIAAYFAlUJnKcACgkQvFcC4BYPU0piXACfdM9Nd7TigyypWNsITveNCeJF
+gAQAoKRoAsM7huMM2nvb0kGIO2aEBOk4
+=R0oS
 -----END PGP SIGNATURE-----
