@@ -1,6 +1,13 @@
 # ChangeLog for media-libs/libcaca
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libcaca/ChangeLog,v 1.127 2014/09/21 20:06:57 maekke Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libcaca/ChangeLog,v 1.128 2015/03/18 15:41:26 aballier Exp $
+
+*libcaca-0.99_beta19 (18 Mar 2015)
+
+  18 Mar 2015; Alexis Ballier <aballier@gentoo.org>
+  +libcaca-0.99_beta19.ebuild:
+  version bump; use ruby20 for ruby bindings, bug #483104; fix java bindings
+  build, bug #508564; use mono-env.eclass, should fix bug #483372
 
   21 Sep 2014; Markus Meier <maekke@gentoo.org> libcaca-0.99_beta18-r2.ebuild:
   arm stable, bug #522270
