@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/jsonrpclib
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/jsonrpclib/ChangeLog,v 1.7 2015/03/08 23:51:57 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/jsonrpclib/ChangeLog,v 1.8 2015/03/18 15:34:01 vapier Exp $
+
+*jsonrpclib-0_pre20150305 (18 Mar 2015)
+
+  18 Mar 2015; Mike Frysinger <vapier@gentoo.org>
+  +jsonrpclib-0_pre20150305.ebuild, jsonrpclib-9999.ebuild:
+  Update snapshot #543678 by Alexander E. Patrakov.
 
   08 Mar 2015; Pacho Ramos <pacho@gentoo.org>
   jsonrpclib-0_pre20110820-r1.ebuild:
